# FinalProjectENME441

./: .breakpoints  LCD1602.py  cal_setup.py  calendardata.py  credentials.json  custompassiveBuzzer.py  finalproject.html  finalproject.py  finalproject_background.py  htmlactual.html  htmltest.html  passiveBuzzer.py  pyproject.toml  test.py  testsecret.py  wdont use anymore testsecret.py
