[tool.poetry]
name = "repl_python3_FinalProjectENME441"
version = "0.1.0"
description = ""
authors = ["rohithchintala <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
google-api-python-client = "^2.31.0"
google-auth-oauthlib = "^0.4.6"
pytz = "^2021.3"
smbus = "^1.1.post2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
